--- a/FlashpointSecurePlayer/Properties/Resources.resx
+++ b/FlashpointSecurePlayer/Properties/Resources.resx
@@ -136,6 +136,9 @@ Please ensure Flashpoint is not corrupted, was extracted correctly, and is not r
   <data name="EnvironmentVariablesFailed" xml:space="preserve">
     <value>The Environment Variables failed.</value>
   </data>
+  <data name="FailedCreateCustomSecurityManager" xml:space="preserve">
+    <value>Failed to create a Custom Security Manager.</value>
+  </data>
   <data name="FlashpointSecurePlayer" xml:space="preserve">
     <value>Flashpoint Secure Player</value>
   </data>
