--- a/FlashpointSecurePlayer/Properties/Resources.resx
+++ b/FlashpointSecurePlayer/Properties/Resources.resx
@@ -123,6 +123,9 @@
   <data name="ActiveXControlUninstallFailed" xml:space="preserve">
     <value>The ActiveX Control failed to uninstall.</value>
   </data>
+  <data name="AnotherInstanceCausingInterference" xml:space="preserve">
+    <value>Another instance of Flashpoint Secure Player is preventing the Modifications from being activated.</value>
+  </data>
   <data name="AsAdministratorUser" xml:space="preserve">
     <value>as Administrator User</value>
   </data>
