added Download Source modification

--- a/FlashpointSecurePlayer/Properties/Resources.resx
+++ b/FlashpointSecurePlayer/Properties/Resources.resx
@@ -124,7 +124,7 @@
     <value>The ActiveX Control failed to uninstall.</value>
   </data>
   <data name="AddressNotUnderstood" xml:space="preserve">
-    <value>The address wasn't understood. Please report this bug.</value>
+    <value>The address ({0}) wasn't understood. Please report this bug.</value>
   </data>
   <data name="AnotherInstanceCausingInterference" xml:space="preserve">
     <value>Another instance of Flashpoint Secure Player is preventing the Modifications from being activated.</value>
